# app-analisis-siniestralidad

./: .env.public  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  404.html  README.md  database.db  expuestos  index.html  mkdocs.yml  package-lock.json  primas  pyproject.toml  run.py  styles.css  wtf.py
actualizacion/: index.html
auditores/: index.html
auditores/entremes/: index.html
auditores/inicio/: index.html
auditores/triangulos/: index.html
backups/: base_plantillas_v1.py  base_plantillas_v2.py  plantilla_v1.py  triangulo.py
cierre/configuraciones/: index.html
cierre/particularidades/: index.html
config/aperturas/: index.html
config/cuadre_contable/: index.html
config/fuentes/: index.html
config/queries/: index.html
config/sap/: index.html
config/segmentacion/: index.html
configuracion/: index.html
data/: plantilla_segmentacion.xlsx  segmentacion.xlsx  segmentacion_autonomia.xlsx  segmentacion_demo.xlsx  segmentacion_mock.xlsx  segmentacion_movilidad.xlsx  segmentacion_soat.xlsx
data/catalogos/: planes.parquet  sucursales.parquet
data/optimizaciones/: expuestos_autonomia_opt.sql  expuestos_autonomia_opt_2.txt  primas_autonomia_opt_2.sql  primas_autonomia_opt_3.sql  primas_autonomia_opt_3.txt  siniestros_autonomia_opt.txt
data/optimizations/: expuestos_autonomia_opt.sql  expuestos_autonomia_opt.txt  expuestos_autonomia_opt_2.sql  primas_autonomia_opt.sql  primas_autonomia_opt.txt  primas_autonomia_opt_2.txt  siniestros_autonomia_opt.sql  siniestros_autonomia_opt.txt
data/queries/: expuestos.sql  expuestos_autonomia.sql  expuestos_autonomia_opt.sql  primas.sql  primas_autonomia.sql  siniestros.sql  siniestros_autonomia.sql  siniestros_autonomia_opt.sql  siniestros_brutos_autonomia.sql  siniestros_cedidos_autonomia.sql
data/queries/autonomia/: expuestos.sql  primas.sql  siniestros.sql  siniestros_brutos.sql  siniestros_cedidos.sql
data/queries/backups/: siniestros_autonomia.sql
diccionario/: index.html
docs/: actualizacion.md  auditores.md  configuracion.md  diccionario.md  estructura.md  faq.md  index.md  instalacion.md  introduccion.md  pruebas.md  uso.md
docs/auditores/: entremes.md  inicio.md  triangulos.md
docs/cierre/: configuraciones.md  particularidades.md
docs/config/: aperturas.md  cuadre_contable.md  fuentes.md  queries.md  sap.md  segmentacion.md
docs/controles/: controles.md
docs/faq/: faq.md
docs/particularidades/: soat.md
docs/uso/: controles.md  ejecutar_app.md  entremes.md  extraccion.md  funciones_plantilla.md  informes.md  inicio.md  parametros.md  plantilla.md  preparacion_plantilla.md  resultados.md  triangulos.md
estructura/: index.html
faq/: index.html
faq/faq/: index.html
instalacion/: index.html
introduccion/: index.html
output/: ar.xlsx  resultados.xlsx
particularidades/soat/: index.html
plantillas/: plantilla.xlsm
pruebas/: index.html
search/: search_index.json
src/: app.py  app2.py  configuracion.py  constantes.py  db.py  db_tester.py  dependencias.py  guardar_traer.py  gui.py  init_db.py  logger_config.py  main.py  models.py  plantilla.py  plantilla.xlsm  plantilla_mac.xlsm  plantilla_test_soat.xlsm  plantilla_win.py  query_optimizer.py  resultados.py  resultados.xlsm  server.py  tablas_resumen.py  utils.py  wtf.py
src/controles_informacion/: bases_plantilla.py  controles_gen.py  controles_informacion.py  cuadre_contable.py  evidencias.py  generacion.py  metodos_controles.py  sap.py
src/extraccion/: tera_connect.py
src/extraction/: tera_connect.py
src/informacion/: almacenamiento.py  carga_manual.py  mocks.py  tera_connect.py
src/methods_plantilla/: base_plantillas.py
src/metodos_plantilla/: abrir.py  actualizar.py  almacenar_analisis.py  base_plantillas.py  generar.py  graficas.py  guardar_traer.py  indexaciones.py  insumos.py  preparar.py  rangos_parametros.py  resultados.py  tablas_resumen.py
src/procesamiento/: base_primas_expuestos.py  base_siniestros.py  bases.py  utils.py
src/processing/: data_processing.py
src/routers/: controles_informacion.py  informacion.py  metodos_plantilla.py  parametros.py
src/static/: apiButtons.js  apiForms.js  apiUtils.js  cargaManual.js  controles.js  descargarEjemplos.js  extraccion.js  generarAperturas.js  generarDropdownAtributos.js  generarDropdownPlantillas.js  guardarPeriodicidades.js  ingresarParametros.js  logViewer.js  log_viewer.js  modosPlantilla.js  prepararPlantilla.js  styles.css  toast.js  traerEntremes.js  traerGuardarTodo.js  traerParametros.js
src/templates/: index.html  result.html
src/teradata/: tera_connect.py
src/validation/: adds.py  aperturas.py  cantidades.py  segmentacion.py  validaciones.py
src/vba_modules/: almacenamiento.bas  constantes.bas  entremes.bas  graficas.bas  methods.bas  triangulos.bas
tests/: configuracion.py  conftest.py  mock_plantilla.xlsm  mock_segmentacion.xlsx  test_app.py  test_autonomia.py  test_base_primas_expuestos.py  test_base_siniestros.py  test_constantes.py  test_controles_informacion.py  test_cuadre_contable.py  test_movilidad.py  test_plantilla.py  test_resultados.py  test_soat.py  test_tera_connect.py  test_utils.py
tests/autonomia/: test_autonomia.py
tests/controles_informacion/: test_aptitud_cuadre.py  test_cuadre_contable.py  test_generacion.py  test_sap.py
tests/informacion/: test_carga_cantidades.py  test_carga_segmentacion.py  test_tera_connect.py
tests/metodos_plantilla/: conftest.py  test_actualizar.py  test_almacenar_analisis.py  test_generar.py  test_graficas.py  test_guardar_traer.py  test_indexaciones.py  test_informe_ar.py  test_preparar.py  test_resultados.py
tests/validation/: test_aperturas.py
uso/: index.html
uso/controles/: index.html
uso/ejecutar_app/: index.html
uso/entremes/: index.html
uso/extraccion/: index.html
uso/funciones_plantilla/: index.html
uso/informes/: index.html
uso/inicio/: index.html
uso/parametros/: index.html
uso/plantilla/: index.html
uso/preparacion_plantilla/: index.html
uso/resultados/: index.html
uso/triangulos/: index.html
(+32 files in other folders)
