[project]
name = "plantilla-seguimiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "fastexcel>=0.12.0",
    "flask>=3.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "polars>=1.14.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
    "pytest>=8.3.4",
    "teradatasql>=20.0.0.20",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.0",
    "xlwings>=0.33.3",
]
