[project]
name = "plantilla-seguimiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "fastexcel>=0.12.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "polars>=1.14.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
    "teradatasql>=20.0.0.20",
    "xlsxwriter>=3.2.0",
    "xlwings>=0.33.3",
    "sqlmodel>=0.0.22",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "sse-starlette>=2.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "pip-audit>=2.8.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "sqlfluff>=3.3.1",
    "tqdm>=4.67.1",
    "types-openpyxl>=3.1.5.20241225",
    "types-pyautogui>=0.9.3.20241230",
    "types-tqdm>=4.67.0.20241221",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
plugins = [ "pydantic.mypy" ]
exclude = [".venv"]
no_namespace_packages = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
ignore_missing_imports_per_module = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true


[tool.ruff]
line-length = 88
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",    # builtins
  "B",    # bugbear
  "COM",  # commas 
  "C90",  # mccabe
  "E",    # pycodestyle
  "F",    # pyflakes
  # "D",    # pydocstyle
  "I",    # isort
  "N",    # naming
  "PL",   # pylint
  "UP",   # pyupgrade
  "S",    # bandit
  "FAST", # fastapi
]
ignore = [
  "COM812", # trailing comma missing ...
  "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"] # allow missing docstring in public package

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["configuracion", "logger"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.sqlfluff]
dialect = "teradata"
large_file_skip_byte_limit = 0

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"


[tool.pytest.ini_options]
markers = [
    "plantilla: tests que requieren abrir una plantilla (deselect with '-m \"not plantilla\"')",
    "unit: tests que evaluan partes individuales del proyecto",
    "integration: tests que evaluan la integracion de varias partes individuales del proyecto",
    "end_to_end: tests que evaluan el proyecto de principio a fin",
    "soat: tests para evaluar el proceso real de soat",
    "autonomia: tests para evaluar el proceso real de autonomia",
    "teradata: tests que requieren conectarse a Teradata",
]
