[project]
name = "plantilla-seguimiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastexcel>=0.14.0",
    "polars>=1.32.0",
    "teradatasql>=20.0.0.33",
    "xlsxwriter>=3.2.5",
    "xlwings>=0.33.15",
    "sqlmodel>=0.0.24",
    "loguru>=0.7.3",
    "sse-starlette>=2.2.1",
    "numpy>=2.3.2",
    "mss>=10.1.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
lint = [
    "ruff>=0.12.7",
    "sqlfluff>=3.4.2",
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "ty>=0.0.1a19",
    "types-openpyxl>=3.1.5.20250919",
]
tests = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pydantic-settings>=2.10.1",
]
docs = [
    "mkdocs-material>=9.6.16",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
]

[tool.ty.src]
include = [
    "src",
    "tests",
]

[tool.ruff]
line-length = 88
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",    # builtins
  "B",    # bugbear
  "COM",  # commas 
  "C90",  # mccabe
  "E",    # pycodestyle
  "F",    # pyflakes
  # "D",    # pydocstyle
  "I",    # isort
  "N",    # naming
  "PL",   # pylint
  "UP",   # pyupgrade
  "S",    # bandit
  "FAST", # fastapi
]
ignore = [
  "COM812", # trailing comma missing ...
  "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"] # allow missing docstring in public package

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["configuracion", "logger"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.sqlfluff.core]
dialect = "teradata"
large_file_skip_byte_limit = 0

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"


[tool.pytest.ini_options]
markers = [
    "plantilla: tests que requieren abrir una plantilla (deselect with '-m \"not plantilla\"')",
    "soat: tests para evaluar el proceso real de soat",
    "autonomia: tests para evaluar el proceso real de autonomia",
    "movilidad: tests para evaluar el proceso real de movilidad",
    "teradata: tests que requieren conectarse a Teradata",
    "fast: tests rapidos",
]

[tool.coverage.run]
omit = [
  'tests/*',
]
